<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/home_menu"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>

        <item android:id="@+id/profile_menu"
            android:icon="@drawable/person_icon"
            android:title="@string/profile"/>

        <item android:id="@+id/status_menu"
            android:icon="@drawable/ic_baseline_lock_person_24"
            android:title="@string/status"/>

        <item android:id="@+id/treatment_menu"
            android:icon="@drawable/star_icon"
            android:title="@string/treatment"/>

        <item android:id="@+id/medicalJournal_menu"
            android:icon="@drawable/attach_file_icon"
            android:title="@string/medical_files"/>

        <item android:id="@+id/history_menu"
            android:icon="@drawable/clock_icon"
            android:title="@string/history"/>

        <item android:id="@+id/logOut_menu"
            android:icon="@drawable/_logout_24"
            android:title="@string/log_out"/>
    </group>


</menu>