<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecogniseTextActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_inputImage"
            android:text="@string/select_image"
            app:cornerRadius="5dp"
            app:icon="@drawable/attach_file_icon"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:layout_marginEnd="5dp"
           />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_recogniseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extract_text"
            app:icon="@drawable/eye_icon"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            app:cornerRadius="5dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_imageSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_image_search"
            app:strokeWidth="2dp"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recognized_text"/>

            <EditText
                android:id="@+id/et_recognisedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textSize="15sp"
                android:text="@string/do_you_want_to_save_this_text_first_set_the_title"/>

            <EditText
                android:id="@+id/et_getTitleForText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/example_name"
                tools:ignore="TouchTargetSizeCheck" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/purple_200"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                app:cornerRadius="5dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>