<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_documents"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_dialog_document"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/search__"
            android:minHeight="48dp"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_searchDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/purple_200"
            android:layout_marginStart="10dp"
            android:text="@string/find_all" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_documentsToSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>